@@ -1,3 +1,9 @@
+2009-03-09  svu
+
+	* libxklavier/xklavier_config_xkb.c: no need to display loads of 
+	warnings from xkbcomp,
+	http://bugs.freedesktop.org/show_bug.cgi?id=20526
+
 2009-02-21  svu
 
 	* libxklavier/Makefile.am, tests/Makefile.am: reordering CFLAGS,
